# ProjectGitav0.1

./: .env.example  .gitignore  CMakeLists.txt  Project Brief  README.md  database_setup.sql  package-lock.json  package.json  setup-database.js
gita/: CHANGELOG.md  CONTRIBUTING.md  index.html  jest.config.cjs  package-lock.json  package.json  tailwind.config.cjs  tailwind.config.js
gita/gita/: package-lock.json
gita/src/: App.css  App.tsx  index.css  main.tsx  styles.css  tailwind.css  types.ts
gita/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
gita/src-tauri/src/: audio.rs  audio_handler.rs  block_handler.rs  dal_error.rs  db.rs  file_handler.rs  file_system.rs  lib.rs  link_handler.rs  main.rs  page_handler.rs
gita/src/api/: audio.test.ts  audio.ts  fileSystem.test.ts  fileSystem.ts
gita/src/components/: AudioControls.tsx  AudioPlayer.test.tsx  AudioPlayer.tsx  AudioRecorder.tsx  AudioRecordingsList.tsx  Backlinks.tsx  DeleteConfirmationModal.tsx  Editor.tsx  EditorContainer.tsx  ErrorDisplay.tsx  FileTree.tsx  KeyboardShortcutsModal.tsx  Sidebar.tsx  ThemeToggle.test.tsx  ThemeToggle.tsx  Toolbar.tsx  Tooltip.tsx
gita/src/components/editor/: AudioBlockComponent.test.tsx  AudioBlockComponent.tsx  EditorToolbar.tsx  LexicalEditor.css  LexicalEditor.integration.test.tsx  LexicalEditor.tsx
gita/src/components/editor/nodes/: AudioBlockNode.tsx  BacklinkNode.tsx  BlockReferenceNode.tsx
gita/src/components/editor/plugins/: AudioBlockPlugin.tsx  AudioTimestampPlugin.tsx  AutoTimestampPlugin.tsx  BacklinksPlugin.tsx  BlockReferencePlugin.tsx  EnforceBulletListPlugin.tsx  TabIndentationPlugin.tsx
gita/src/contexts/: AudioContext.tsx  FileSystemContext.tsx
gita/src/hooks/: useErrorMessages.ts  useKeyboardShortcuts.ts
gita/src/stores/: audioRecordingStore.ts
gita/src/types/: index.ts
gita/src/utils/: lexicalUtils.ts  markdownUtils.test.ts  markdownUtils.ts
obsidian-replica/: README.md  package.json  tailwind.config.js
obsidian-replica/src/: App.tsx  main.tsx
obsidian-replica/src/components/CommandPalette/: index.tsx
obsidian-replica/src/components/Editor/: index.tsx
obsidian-replica/src/components/Layout/: Sidebar.tsx  StatusBar.tsx  Toolbar.tsx  index.tsx
obsidian-replica/src/contexts/: AudioContext.tsx  NotesContext.tsx  SettingsContext.tsx  ThemeContext.tsx
obsidian-replica/src/pages/Home/: index.tsx
obsidian-replica/src/pages/NoteView/: index.tsx
obsidian-replica/src/styles/: index.css
resources/: styles.qss
src/: App.js  MainWindow.cpp  MainWindow.h  main.cpp
src/components/: Editor.js  PageHeader.js  PageLinks.js  Sidebar.js
src/editor/: MarkdownEditor.cpp  MarkdownEditor.h  SyntaxHighlighter.cpp  SyntaxHighlighter.h
src/hooks/: usePages.js
src/main/: database.js  main.js  preload.js
src/models/: Note.cpp  Note.h  NoteDatabase.cpp  NoteDatabase.h
src/styles/: GlobalStyles.js
src/widgets/: NavigationPanel.cpp  NavigationPanel.h  PageList.cpp  PageList.h
