[package]
name = "obsidian-replica"
version = "0.1.0"
description = "An Obsidian replica with markdown editing and audio recording features"
authors = ["Manus AI"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = [ "protocol-asset", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.29.0", features = ["bundled"] }
walkdir = "2.3.3"
notify = "4.0.17"
regex = "1.9.1"
chrono = "0.4.26"
serde_yaml = "0.9.21"
cpal = "0.15.2"
hound = "3.5.0"
lazy_static = "1.4.0"
ringbuf = "0.3.3"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

