[package]
name = "obsidian-replica"
version = "0.1.0"
description = "An Obsidian replica with markdown editing and audio recording features"
authors = ["Manus AI"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = [ "protocol-asset"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7.4", features = [ "runtime-tokio-native-tls", "postgres", "uuid", "chrono", "json" ] } # Pinned to 0.7.4, removed "offline"
tokio = { version = "1", features = ["full"] }
walkdir = "2.3.3"
notify = "4.0.17"
regex = "1.9.1"
chrono = { version = "0.4.26", features = ["serde"] }
serde_yaml = "0.9.21"
thiserror = "1.0"
cpal = "0.15.2"
hound = "3.5.0"
lazy_static = "1.4.0"
ringbuf = "0.3.3"
tauri-plugin-opener = "^2.0.0" # Added opener plugin
uuid = { version = "1", features = ["v4"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

